--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "@headlessui/react": "^1.7.1",
     "@heroicons/react": "^2.0.11",
+    "@types/react-helmet": "^6.1.5",
+    "chart.js": "^3.9.1",
     "next": "12.3.0",
+    "ng2-charts": "^4.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0"
