--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.0.11",
     "next": "12.3.0",
     "react": "18.2.0",
+    "react-calendar": "^3.8.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0"
   },
