--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.1",
     "@heroicons/react": "^2.0.11",
+    "@prisma/client": "^4.3.1",
     "@types/react-helmet": "^6.1.5",
     "chart.js": "^3.9.1",
     "next": "12.3.0",
