--- a/package.json
+++ b/package.json
@@ -28,9 +28,8 @@
     "autoprefixer": "^10.4.11",
     "eslint": "8.23.1",
     "eslint-config-next": "12.3.0",
-    "install": "^0.13.0",
-    "npm": "^8.19.2",
     "postcss": "^8.4.16",
+    "prisma": "^4.3.1",
     "react-chartjs-2": "^4.3.1",
     "tailwindcss": "^3.1.8",
     "typescript": "4.8.3"
