--- a/package.json
+++ b/package.json
@@ -19,13 +19,15 @@
     "react": "18.2.0",
     "react-calendar": "^3.8.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.4.0"
+    "react-icons": "^4.4.0",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
     "@types/node": "18.7.17",
     "@types/react": "18.0.19",
     "@types/react-dom": "18.0.6",
+    "@types/validator": "^13.7.6",
     "autoprefixer": "^10.4.11",
     "eslint": "8.23.1",
     "eslint-config-next": "12.3.0",
