--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
     "@heroicons/react": "^2.0.11",
     "@prisma/client": "^4.3.1",
     "@types/react-helmet": "^6.1.5",
+    "axios": "^0.27.2",
     "chart.js": "^3.9.1",
+    "formik": "^2.2.9",
     "next": "12.3.0",
     "ng2-charts": "^4.0.0",
     "react": "18.2.0",
     "react-calendar": "^3.8.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
-    "validator": "^13.7.0"
+    "validator": "^13.7.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
