--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@headlessui/react": "^1.7.1",
     "@heroicons/react": "^2.0.11",
     "@prisma/client": "^4.3.1",
+    "@supabase/auth-helpers-nextjs": "^0.2.8",
+    "@supabase/supabase-js": "^1.35.6",
     "@types/react-helmet": "^6.1.5",
     "axios": "^0.27.2",
     "chart.js": "^3.9.1",
