--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.0.11",
     "@prisma/client": "^4.3.1",
     "@supabase/auth-helpers-nextjs": "^0.2.8",
+    "@supabase/auth-helpers-react": "^0.2.4",
     "@supabase/supabase-js": "^1.35.6",
     "@types/react-helmet": "^6.1.5",
     "axios": "^0.27.2",
