--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-helmet": "^6.1.5",
     "axios": "^0.27.2",
     "chart.js": "^3.9.1",
+    "date-fns": "^2.29.3",
     "formik": "^2.2.9",
     "next": "12.3.0",
     "ng2-charts": "^4.0.0",
@@ -29,6 +30,8 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@babel/core": "^7.19.1",
+    "@babel/preset-env": "^7.19.1",
     "@tailwindcss/forms": "^0.5.3",
     "@types/node": "18.7.17",
     "@types/react": "18.0.19",
