--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "date-fns": "^2.29.3",
     "formidable": "^2.0.1",
     "formik": "^2.2.9",
+    "moment": "^2.29.4",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
     "next": "12.3.0",
