--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@headlessui/react": "^1.7.1",
     "@heroicons/react": "^2.0.11",
     "@prisma/client": "^4.3.1",
+    "@reduxjs/toolkit": "^1.8.5",
+    "@sendgrid/mail": "^7.7.0",
     "@supabase/auth-helpers-nextjs": "^0.2.8",
     "@supabase/auth-helpers-react": "^0.2.4",
     "@supabase/supabase-js": "^1.35.6",
@@ -33,6 +35,7 @@
     "react-countdown-circle-timer": "^3.0.9",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
+    "react-redux": "^8.0.4",
     "react-timecode": "^1.2.0",
     "react-timer-wrapper": "^0.4.1",
     "validator": "^13.7.0",
